# OpenGL.Game

./: .gitignore  CMakeLists.txt  CmakeBuild.bat  GlfwPaths  Readme.md  TestOpenGL.sln  build.bat  build.sh  compile.bat  run.bat
Ref/Include/glad/: glad.h
Ref/Libs/: glfw3.lib  readme.txt
Ref/Libs/glfw3/: glfw3.lib
TestOpenGL/: Shader.cpp  Shader.h  Source.cpp  TestOpenGL.vcxproj  glad.c  std_image_impl.h
TestOpenGL/Feature/: Camera.h  CameraTemp.cpp  CameraTemp.h  DrawCube.cpp  DrawCube.h  DrawCubeColor.cpp  DrawCubeColor.h  DrawCubeInstance.cpp  DrawCubeInstance.h  DrawCubeStencilTest.cpp  DrawCubeStencilTest.h  DrawQuadrilateral.cpp  DrawQuadrilateral.h  DrawTexture.cpp  DrawTexture.h  DrawTriangle.cpp  DrawTriangle.h  DrawTriangleUtil.cpp  DrawTriangleUtil.h  ImageLoader.cpp  ImageLoader.h  TestLoadModel.cpp  TestLoadModel.h  TestMatrix.cpp  TestMatrix.h
TestOpenGL/Shader/: fragment.shader  light.frag  shader1.frag  shader3.frag  shader3.vert  shader3_cube.frag  shader4_cube.frag  shader4_cube.vert  shader4_light.frag  shader4_light.vert  shader5_model.frag  shader6_intance.frag  shader6_intance.vert  vertex.shader
TestOpenGL/Shader/shader2_cube/: shader1.frag  shader1.vert
TestOpenGL/Shader/shader2_texture/: shader1.frag  shader1.vert
TestOpenGL/Test/: Test1.cpp  Test1.h
TestOpenGL/Utils/: DrawTriangleInstanceUtil.cpp  DrawTriangleInstanceUtil.h  DrawTriangleUtil.cpp  DrawTriangleUtil.h  ModelUtil.cpp  ModelUtil.h  ShaderUtil.cpp  ShaderUtil.h  TextureUtil.cpp  TextureUtil.h  WindowUtil.cpp  WindowUtil.h
TestOpenGL/Utils/Model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
